# project-novi

./: README.md  pyproject.toml  sample_channels.txt  sample_urls.txt
novi/: __init__.py  dl.py  vtt.py
